# Imperial-Engine-3

./: .gitignore  CMakeLists.txt  setup_vscode.sh
engine/: CMakeLists.txt
engine/src/: CommandBufferPool.cpp  CommandBufferPool.h  Debug.cpp  Debug.h  Dummy.cpp  Engine.cpp  Engine.h  Layers.cpp  Layers.h  Log.h  Platform.cpp  Platform.h  PrimitivePool.h  Queue.cpp  Queue.h  SafeResourceDestroyer.cpp  SafeResourceDestroyer.h  StructureType.h  SubmitSyncManager.cpp  SubmitSyncManager.h  Swapchain.cpp  Swapchain.h  VulkanFunctionTable.h  Window.cpp  Window.h
engine/src/Platform/: PlatformImpl.h
engine/src/Platform/Android/: AndroidPlatform.h  PlatformImpl.cpp  WindowAndroid.cpp  WindowAndroid.h
engine/src/Platform/Windows/: PlatformImpl.cpp  WindowGLFW.cpp  WindowGLFW.h
projects/demo/: CMakeLists.txt  build.sh
projects/demo/src/: SceneLoader.cpp  SceneLoader.h  main.cpp  vkutilities.cpp  vkutilities.h
projects/demo/src/shaders/: phong.frag  phong.vert
projects/demo/src/shaders/spv/: phong_frag.h  phong_vert.h  triangle_frag.h  triangle_vert.h
projects/triangle/: CMakeLists.txt
projects/triangle/src/: main.cpp  vkutilities.h
projects/triangle/src/shaders/: triangle.frag  triangle.vert
